# Jano

./: .gitignore  Cargo.toml  README.md  read_me_before_running.sh
example/: Cargo.toml
example/src/: lib.rs
jano/: Cargo.toml
jano-cli/: Cargo.toml
jano-cli/src/: create_android_project.rs  jano.rs  main.rs
jano-cli/src/project_files/: AndroidManifest.xml  gradle.properties
jano-cli/src/project_files/app/: build.gradle
jano-cli/src/project_files/java/: MainActivity.java  SocketWrapper.java
jano/src/: egui_app.rs  graphics.rs  input.rs  lib.rs
